infrastructure/aws/cloudformation/csye6225-cf-application_v1.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Cloud Formation Template - CSYE6225 - Creating EC2 instance , Security Groups and Ingress Rules",
	"Parameters": {
		"EC2Name": {
			"Type": "String"
		},
		"EC2SecurityGroup": {
			"Type": "String"
		},
		"SubnetId1": {
			"Type": "String"
		},
		"VpcId": {
			"Type": "String"
		},
		"KeyName": {
			"Type": "String"
		},
		"S3BucketName": {
			"Description": "Domain name for the website",
			"Type": "String"
		},
		"DynamoDBTableName": {
			"Description": "Table Name",
			"Type": "String"
		},
		"MyDBName": {
			"Description": "Table name",
			"Type": "String"
		}
	},
	"Resources": {
		"ourEC2Instance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"InstanceType": "t2.micro",
				"ImageId": "ami-9887c6e7",
				"KeyName": "MyKeyPair",
				"BlockDeviceMappings": [{
					"DeviceName": "/dev/sda1",
					"Ebs": {
						"VolumeSize": "16",
						"VolumeType": "gp2"
					}
				}],
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref": "EC2Name"
					}
				}],
				"SecurityGroupIds": [{
					"Ref": "EC2SecurityGroup"
				}],
				"SubnetId": {
					"Ref": "SubnetId1"
				}
			}
		},
		"WebServerSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupName": "csye6225-webapp",
				"GroupDescription": "Access to ports 22, 80 & 443",
				"VpcId": {
					"Ref": "VpcId"
				},
				"SecurityGroupIngress": [{
						"IpProtocol": "tcp",
						"FromPort": "22",
						"ToPort": "22",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "443",
						"ToPort": "443",
						"CidrIp": "0.0.0.0/0"
					}
				]
			}
		},
		"DBEC2SecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupName": "csye6225-rds",
				"GroupDescription": "Open database for access",
				"SecurityGroupIngress": [{
					"IpProtocol": "tcp",

					"FromPort": "3306",
					"ToPort": "3306",
					"SourceSecurityGroupId": {
						"Ref": "EC2SecurityGroup"
					}
				}],
				"VpcId": {
					"Ref": "VpcId"
				}
			}
		},
		"myDynamoDBTable": {
			"Type": "AWS::DynamoDB::Table",
			"Properties": {
				"AttributeDefinition" :[
					{
					"AttributeName":"Album",
					"AttributeType":"S"
					}],
				"KeySchema": [{
					"AttributeName": "id",
					"KeyType": "RANGE"
				}],
				"ProvisionedThroughput": {
					"ReadCapacityUnits": "5",
					"WriteCapacityUnits": "10"
				},
				"TableName": {
					"Ref": "DynamoDBTableName"
				}
			}
		},
		"myS3Bucket": {
			"Type": "AWS::S3::Bucket",
			"Properties": {
				"BucketName": {
					"Ref": "S3BucketName"
				}
			}
		},
		"MyDB": {
			"Type": "AWS::RDS::DBInstance",
			"Properties": {
				"DBInstanceClass": "db.t2.medium",
				"Engine": "MySQL",
				"MultiAZ": "NO",
				"MasterUsername": "csye6225master",
				"Masterpassword": "csye6225password",
				"DBSubnetGroupName": {
					"Ref": "myDBSubnetGroup"
				},
				"PubliclyAccessible": "No",
				"DBName": {
					"Ref": "MyDBName"
				},
				"VpcId": {
					"Ref": "VpcId"
				},
				"DBEC2SecurityGroup": {
					"Ref": "EC2SecurityGroup"
				}
			}
		},
		"myDBSubnetGroup": {
			"Type": "AWS::RDS::DBSubnetGroup",
			"Properties": {
				"DBSubnetGroupDescription": "description",
				"SubnetIds": ["subnet-01647a22a1db11add", "subnet-0f53049098db4b376", "subnet-0f53049098db4b376", "subnet-0f53049098db4b376", "subnet-0f53049098db4b376", "subnet-0f53049098db4b376"]

			}
		}
	}

}
